--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,26 +43,16 @@ const projects = [
 
   <div class="container px-5 py-16 space-y-7">
     <div class="text-3xl">Привет, я Лёша 👋</div>
-    <div class="text-neutral-500">
+    <div class="text-neutral-400">
       Fullstack-разработчик, разработчик Telegram-ботов из Перми.<br />
       Пишу проекты любой сложности.
     </div>
-    <div class="flex items-center gap-3">
-      <a class="text-neutral-500 hover:underline" href="https://t.me/mckoda09">
-        Telegram
-      </a>
-      <div class="text-neutral-500">/</div>
-      <a
-        class="text-neutral-500 hover:underline"
-        href="https://github.com/mckoda09"
-      >
-        Github
-      </a>
-      <div class="text-neutral-500">/</div>
-      <a
-        class="text-neutral-500 hover:underline"
-        href="mailto:mckoda09@gmail.com">Email</a
-      >
+    <div class="flex items-center gap-3 text-neutral-500">
+      <a class="hover:underline" href="https://t.me/mckoda09"> Telegram </a>
+      <div>/</div>
+      <a class="hover:underline" href="https://github.com/mckoda09"> Github </a>
+      <div>/</div>
+      <a class="hover:underline" href="mailto:mckoda09@gmail.com">Email</a>
     </div>
   </div>
 
