--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const projects = [
     </div>
   </div>
 
-  <div class="container p-5 grid gap-5 md:grid-cols-2 lg:grid-cols-3">
+  <!-- <div class="container p-5 grid gap-5 md:grid-cols-2 lg:grid-cols-3">
     {projects.map((project) => <Project {...project} />)}
-  </div>
+  </div> -->
 </Layout>
