--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/main.css";
+import "../styles/global.css";
 ---
 
 <!doctype html>
@@ -10,17 +10,17 @@ import "../styles/main.css";
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
-    <link rel="icon" type="image/jpg" href="/favicon.jpg" />
+    <link rel="icon" type="image/jpeg" href="/favicon.jpg" />
     <title>mckoda09</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body class="bg-neutral-900 text-white">
+  <body>
     <slot />
   </body>
 </html>
